--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
                 <span class="logo-accent">Web</span><span class="logo">Studio</span>
             </a>
 
-            <ul class="navigation-list">
-                <li class="navigation-list-item list"><a class="navigation-list-link link" href="./index.html">Студия</a></li>
-                <li class="navigation-list-item list"><a class="navigation-list-link link" href="./portfolio.html">Портфолио</a></li>
-                <li class="navigation-list-item list"><a class="navigation-list-link link" href="">Контакты</a></li>
+            <ul class="navigation-list list">
+                <li><a href="./index.html" class="navigation-list-link link current">Студия</a></li>
+                <li><a href="./portfolio.html" class="navigation-list-link link" >Портфолио</a></li>
+                <li><a href="" class="navigation-list-link link" >Контакты</a></li>
 
             </ul>
 
@@ -111,12 +111,19 @@
         </a>
         
         <address class="address">
-            г. Киев, пр-т Леси Украинки, 26
-        </address>
+            <ul>
+                <li>
+                    <p>г. Киев, пр-т Леси Украинки, 26</p>
+                </li>
+                <li>
+                    <a class="footer-email-link link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                </li>
 
-        <address class="address">
-            <a class="footer-email-link link" href="mailto:info@devstudio.com">info@devstudio.com</a>
-            <a class="footer-tel-link link" href="tel:+380961111111">+38 096 111 11 11</a>
+                <li>
+                    <a class="footer-tel-link link" href="tel:+380961111111">+38 096 111 11 11</a>
+                </li>
+                
+            </ul>
         </address>
     </footer>
 
