--- a/portfolio.html
+++ b/portfolio.html
@@ -18,10 +18,10 @@
                 <span class="logo-accent">Web</span><span class="logo">Studio</span>
             </a>
 
-            <ul class="navigation-list">
-                <li class="navigation-list-item list"><a class="navigation-list-link link" href="./index.html">Студия</a></li>
-                <li class="navigation-list-item list"><a class="navigation-list-link link" href="./portfolio.html">Портфолио</a></li>
-                <li class="navigation-list-item list"><a class="navigation-list-link link" href="">Контакты</a></li>
+            <ul class="navigation-list list">
+                <li><a href="./index.html" class="navigation-list-link link" >Студия</a></li>
+                <li><a href="./portfolio.html" class="navigation-list-link link current" >Портфолио</a></li>
+                <li><a href="" class="navigation-list-link link" >Контакты</a></li>
             </ul>
 
         </nav>  
@@ -69,49 +69,49 @@
                         <p class="our-projects-list-subtitle">Дизайн</p>
                     </a>
                 </li>
-                <li class="our-projects-list-item list"></li>
+                <li class="our-projects-list-item list">
                     <a class="our-projects-list-link link" href="">
                         <img src="./images/portfolio/app-restaurant.jpg" alt="Приложение для ресторана" width="370" height="294">
                         <h2 class="our-projects-list-title">Ресторан <span lang="en">Seafood</span> </h2>
                         <p class="our-projects-list-subtitle">Приложение</p>
                     </a>
                 </li>
-                <li class="our-projects-list-item list"></li>
+                <li class="our-projects-list-item list">
                     <a class="our-projects-list-link link" href="">
                         <img src="./images/portfolio/project-prime.jpg" alt="Проект прайм" width="370" height="294">
                         <h2 class="our-projects-list-title">Проект <span lang="en">Prime</span> </h2>
                         <p class="our-projects-list-subtitle">Маркетинг</p>
                     </a>
                 </li>
-                <li class="our-projects-list-item list"></li>
+                <li class="our-projects-list-item list">
                     <a class="our-projects-list-link link" href="">
                         <img src="./images/portfolio/project-boxes.jpg" alt="Проект Боксис" width="370" height="294">
                         <h2 class="our-projects-list-title">Проект <span lang="en">Boxes</span> </h2>
                         <p class="our-projects-list-subtitle">Приложение</p>
                     </a>
                 </li>
-                <li class="our-projects-list-item list"></li>
+                <li class="our-projects-list-item list">
                     <a class="our-projects-list-link link" href="">
                         <img src="./images/portfolio/inspirationhasnoborders.jpg" alt="Веб-сайт" width="370" height="294">
                         <h2 class="our-projects-list-title"> <span lang="en">Inspiration has no Borders</span> </h2>
                         <p class="our-projects-list-subtitle">Веб-сайт</p>
                     </a>
                 </li>
-                <li class="our-projects-list-item list"></li>
+                <li class="our-projects-list-item list">
                     <a class="our-projects-list-link link" href="">
                         <img src="./images/portfolio/design-limited-edition.jpg" alt="Дизайн издания" width="370" height="294">
                         <h2 class="our-projects-list-title">Издание <span lang="en">Limited Edition</span> </h2>
                         <p class="our-projects-list-subtitle">Дизайн</p>
                     </a>
                 </li>
-                <li class="our-projects-list-item list"></li>
+                <li class="our-projects-list-item list">
                     <a class="our-projects-list-link link" href="">
                         <img src="./images/portfolio/project-lab.jpg" alt="Проект ЛАБ" width="370" height="294">
                         <h2 class="our-projects-list-title">Проект <span lang="en">LAB</span> </h2>
                         <p class="our-projects-list-subtitle">Маркетинг</p>
                     </a>
                 </li>
-                <li class="our-projects-list-item list"></li>
+                <li class="our-projects-list-item list">
                     <a class="our-projects-list-link link" href="">
                         <img src="./images/portfolio/app-growing-business.jpg" alt="Приложение растущий бизнес" width="370" height="294">
                         <h2 class="our-projects-list-title"> <span lang="en">Growing Business</span> </h2>
@@ -122,20 +122,26 @@
         </section>
     </main>
 
-     <!-- FOOTER -->
-
-     <footer class="footer">
+    <!-- FOOTER -->
+    <footer class="footer">
         <a class="logo-link link" href="./index.html"> 
             <span class="logo-accent">Web</span><span class="logo">Studio</span>
         </a>
         
         <address class="address">
-            г. Киев, пр-т Леси Украинки, 26
-        </address>
+            <ul>
+                <li>
+                    <p>г. Киев, пр-т Леси Украинки, 26</p>
+                </li>
+                <li>
+                    <a class="footer-email-link link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                </li>
 
-        <address class="address">
-            <a class="footer-email-link link" href="mailto:info@devstudio.com">info@devstudio.com</a>
-            <a class="footer-tel-link link" href="tel:+380961111111">+38 096 111 11 11</a>
+                <li>
+                    <a class="footer-tel-link link" href="tel:+380961111111">+38 096 111 11 11</a>
+                </li>
+                
+            </ul>
         </address>
     </footer>
 </body>
