--- a/portfolio.html
+++ b/portfolio.html
@@ -129,18 +129,16 @@
         </a>
         
         <address class="address">
-            <ul>
+            <ul class="address-list list">
                 <li>
-                    <p>г. Киев, пр-т Леси Украинки, 26</p>
+                    <p class="footer-address-text">г. Киев, пр-т Леси Украинки, 26</p>
                 </li>
                 <li>
                     <a class="footer-email-link link" href="mailto:info@devstudio.com">info@devstudio.com</a>
                 </li>
-
                 <li>
                     <a class="footer-tel-link link" href="tel:+380961111111">+38 096 111 11 11</a>
                 </li>
-                
             </ul>
         </address>
     </footer>
